@@ -1,35 +1,0 @@
-# Basic workflow leaning on https://eddelbuettel.github.io/r-travis/
-
-name: R-CMD-check
-
-on:
-  push:
-  pull_request:
-
-env:
-  USE_BSPM: "true"
-  _R_CHECK_FORCE_SUGGESTS_: "false"
-  
-jobs:
-  build:
-    strategy:
-      matrix:
-        config:
-          - {os: macOS-latest}
-          - {os: ubuntu-latest}
-
-    runs-on: ${{ matrix.config.os }}
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: download
-      run: curl -OLs https://eddelbuettel.github.io/r-travis/run.sh
-    - name: mode     
-      run: chmod 0755 run.sh
-    - name: bootstrap
-      run: ./run.sh bootstrap
-    - name: dependencies
-      run: ./run.sh install_all
-    - name: test
-      run: ./run.sh run_tests
